# noosphere

./: .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md  layout.md  release-please-config.json
rust/: .release-please-manifest.json  Cargo.toml  README.md
rust/.cargo/: config
rust/examples/storage_bench/: Cargo.toml  README.md
rust/examples/storage_bench/src/: main.rs
rust/noosphere/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/noosphere-api/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-api/src/: authority.rs  client.rs  data.rs  gateway.rs  lib.rs  route.rs  url.rs
rust/noosphere-car/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-car/src/: error.rs  header.rs  lib.rs  reader.rs  util.rs  varint.rs  writer.rs
rust/noosphere-car/tests/: car_file_test.rs
rust/noosphere-cbor/: Cargo.toml
rust/noosphere-cbor/src/: lib.rs
rust/noosphere-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/noosphere-cli/src/: lib.rs  web.rs
rust/noosphere-cli/src/native/: cli.rs  content.rs  extension.rs  mime.rs  mod.rs  paths.rs  render.rs  workspace.rs
rust/noosphere-cli/tests/: cli.rs  gateway.rs  name_system.rs  peer_to_peer.rs
rust/noosphere-cli/tests/helpers/: cli.rs  mod.rs  random.rs
rust/noosphere-collections/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-collections/src/: lib.rs
rust/noosphere-collections/src/hamt/: bitfield.rs  hamt.rs  hamt_implementation.rs  hash_algorithm.rs  hash_bits.rs  key_value_pair.rs  mod.rs  node.rs  pointer.rs  test.rs
rust/noosphere-common/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-common/src/: channel.rs  latency.rs  lib.rs  sync.rs  task.rs  unshared.rs
rust/noosphere-common/src/helpers/: mod.rs  random.rs  wait.rs
rust/noosphere-core/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-core/examples/: encoding.rs
rust/noosphere-core/src/: error.rs  helpers.rs  lib.rs  stream.rs  tracing.rs
rust/noosphere-core/src/api/: client.rs  data.rs  mod.rs  route.rs
rust/noosphere-core/src/authority/: author.rs  authorization.rs  capability.rs  key_material.rs  mod.rs  verification.rs  walk.rs
rust/noosphere-core/src/context/: context.rs  cursor.rs  has.rs  internal.rs  metadata.rs  mod.rs  walker.rs
rust/noosphere-core/src/data/: address.rs  authority.rs  body_chunk.rs  bundle.rs  changelog.rs  link.rs  links.rs  memo.rs  mod.rs  names.rs  reference.rs  sphere.rs  strings.rs  versioned_map.rs
rust/noosphere-core/src/helpers/: context.rs  link.rs  mod.rs
rust/noosphere-core/src/stream/: block.rs  car.rs  ledger.rs  memo.rs  mod.rs  walk.rs
rust/noosphere-core/src/view/: address.rs  authority.rs  content.rs  mod.rs  mutation.rs  sphere.rs  timeline.rs  versioned_map.rs
rust/noosphere-fs/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-fs/src/: decoder.rs  file.rs  fs.rs  lib.rs
rust/noosphere-gateway/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-gateway/src/: again.rs  authority.rs  context_resolver.rs  error.rs  extractor.rs  gateway.rs  gateway_manager.rs  ipfs.rs  lib.rs  main.rs  nns.rs  single_tenant.rs  sphere_context_resolver.rs  try_or_reset.rs
rust/noosphere-gateway/src/extractors/: authority.rs  cbor.rs  mod.rs  scope.rs  sphere_extractor.rs
rust/noosphere-gateway/src/gateway/: cli.rs  crypto.rs  error.rs  extractors.rs  mod.rs  schema.rs
rust/noosphere-gateway/src/handlers/: mod.rs
rust/noosphere-gateway/src/jobs/: client.rs  job.rs  job_context.rs  job_processor.rs  mod.rs
rust/noosphere-gateway/src/route/: fetch.rs  identify.rs  mod.rs  push.rs  replicate.rs
rust/noosphere-into/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-into/src/: lib.rs  resolve.rs  slashlink.rs  transclude.rs  transformer.rs
rust/noosphere-ipfs/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-ipfs/examples/: car.rs
rust/noosphere-ipfs/src/: client.rs  debug.rs  gateway.rs  kubo.rs  lib.rs  storage.rs
rust/noosphere-name-system/: Cargo.toml
rust/noosphere-name-system/examples/: pinned.toml
rust/noosphere-name-system/src/: cli.rs  lib.rs  main.rs  name_system.rs  utils.rs
rust/noosphere-ns/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-ns/src/: builder.rs  client.rs  dht_client.rs  helpers.rs  keys.rs  lib.rs  name_resolver.rs  name_system.rs  records.rs  utils.rs  validator.rs
rust/noosphere-ns/tests/: dht_test.rs  integration_test.rs  ns_test.rs
rust/noosphere-p2p/: Cargo.toml  README.md
rust/noosphere-p2p/src/: address_book.rs  builder.rs  lib.rs  main.rs  name_system.rs
rust/noosphere-p2p/tests/: integration_test.rs
rust/noosphere-sphere/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-sphere/src/: context.rs  cursor.rs  has.rs  helpers.rs  internal.rs  lib.rs  metadata.rs  replication.rs  walker.rs
rust/noosphere-storage/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-storage/src/: backup.rs  block.rs  buffer.rs  config.rs  db.rs  encoding.rs  ephemeral.rs  fs.rs  helpers.rs  interface.rs  key_value.rs  lib.rs  memory.rs  migration.rs  native.rs  non_persistent.rs  ops.rs  partitioned.rs  retry.rs  scratch.rs  space.rs  storage.rs  store.rs  tap.rs  temp.rs  tracking.rs  ucan.rs  web.rs
rust/noosphere-ucan/: CHANGELOG.md  Cargo.toml  README.md
rust/noosphere-ucan-key-support/: Cargo.toml  README.md
rust/noosphere-ucan-key-support/src/: ed25519.rs  lib.rs  p256.rs  rsa.rs  web_crypto.rs
rust/noosphere-ucan/src/: builder.rs  chain.rs  lib.rs  serde.rs  store.rs  time.rs  ucan.rs
rust/noosphere/examples/: generate_header.rs  version_diff.rs
rust/noosphere/src/: builder.rs  encoding.rs  error.rs  ffi.rs  lib.rs  noosphere.rs  noosphere.udl  platform.rs  sphere.rs  storage.rs
rust/noosphere/src/ffi/: fs.rs  (+11 more)
rust/noosphere/tests/: cli.rs  client_to_gateway.rs  distributed_basic.rs  distributed_stress.rs  gateway.rs  integration.rs  sphere_channel.rs
rust/wasm-engine/: Cargo.toml
rust/wasm-engine/src/: backend.rs  engine.rs  errors.rs  lib.rs  schema.rs
rust/wasm-engine/tests/: add.wat  gcd.wat  tests.rs
(+410 files in other folders)
