[workspace]
members = [
  "rust/noosphere",
  "rust/noosphere-cli",
  "rust/noosphere-collections",
  "rust/noosphere-common",
  "rust/noosphere-core",
  "rust/noosphere-gateway",
  "rust/noosphere-into",
  "rust/noosphere-ipfs",
  "rust/noosphere-ns",
  "rust/noosphere-storage",
]

# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1" }
async-recursion = { version = "1" }
async-stream = { version = "0.3" }
axum = { version = "^0.6.18" }
bytes = { version = "^1" }
cid = { version = "0.10" }
deterministic-bloom = { version = "0.1.0" }
directories = { version = "5" }
fastcdc = { version = "3.1" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
gloo-net = { version = "0.4" }
gloo-timers = { version = "0.3", features = ["futures"] }
ignore = { version = "0.4.20" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
iroh-car = { version = "^0.3.0" }
js-sys = { version = "^0.3" }
libipld = { version = "0.16" }
libipld-core = { version = "0.16" }
libipld-cbor = { version = "0.16" }
libipld-json = { version = "0.16" }
multihash = { version = "0.18" }
pathdiff = { version = "0.2.1" }
rand = { version = "0.8" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
sentry-tracing = { version = "0.31.7" }
serde = { version = "^1" }
serde_json = { version = "^1" }
serde_urlencoded = { version = "~0.7" }
serde-wasm-bindgen = { version = "0.4" }
strum = { version = "0.25" }
strum_macros = { version = "0.25" }
subtext = { version = "0.3.4" }
symlink = { version = "0.1" }
tempfile = { version = "^3" }
thiserror = { version = "1" }
tokio = { version = "^1" }
tokio-stream = { version = "~0.1" }
tokio-util = { version = "0.7" }
tower = { version = "^0.4.13" }
tower-http = { version = "^0.4.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "~0.3.16", features = ["env-filter", "tracing-log", "json"] }
ucan = { version = "0.4.0" }
ucan-key-support = { version = "0.1.7" }
url = { version = "^2" }
void = { version = "1" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-test = { version = "^0.3" }
wasm-bindgen-futures = { version = "^0.4" }
wasm-streams = { version = "0.3.0" }
web-sys = { version = "0.3" }

[profile.release]
opt-level = 'z'
lto = true

