[workspace]
members = [
  "rust/noosphere",
  "rust/noosphere-cli",
  "rust/noosphere-collections",
  "rust/noosphere-common",
  "rust/noosphere-core",
  "rust/noosphere-gateway",
  "rust/noosphere-into",
  "rust/noosphere-ipfs",
  "rust/noosphere-ns",
  "rust/noosphere-storage",
  "rust/noosphere-ucan",
]

# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"

[workspace.dependencies]
noosphere = { path = "rust/noosphere" }
noosphere-cli = { path = "rust/noosphere-cli" }
noosphere-collections = { path = "rust/noosphere-collections" }
noosphere-common = { path = "rust/noosphere-common" }
noosphere-core = { path = "rust/noosphere-core" }
noosphere-gateway = { path = "rust/noosphere-gateway" }
noosphere-into = { path = "rust/noosphere-into" }
noosphere-ipfs = { path = "rust/noosphere-ipfs" }
noosphere-ns = { path = "rust/noosphere-ns" }
noosphere-storage = { path = "rust/noosphere-storage" }
noosphere-ucan = { path = "rust/noosphere-ucan" }
anyhow = { version = "1" }
async-recursion = { version = "1" }
async-stream = { version = "0.3" }
async-trait = { version  = "0.1" }
axum = { version = "^0.7.3" }
axum-tracing-opentelemetry = { version = "0.16.0" }
axum-extra = { version = "^0.9.1" }
base64 = { version = "^0.21" }
bs58 = { version = "^0.5" }
byteorder = { version = "~1.5" } # keep in sync with pinned libipld-* crates
bytes = { version = "^1" }
cid = { version = "0.10" }
clap-vergen = { version = "0.2.0" }
deterministic-bloom = { version = "0.1.0" }
directories = { version = "5" }
ed25519-dalek = { version = "2" }
fastcdc = { version = "3.1" }
futures = { version = "^0.3.30" }
futures-util = { version = "0.3" }
getrandom = { version = "~0.2", features = ["js"]}
gloo-net = { version = "0.4" }
gloo-timers = { version = "0.3", features = ["futures"] }
ignore = { version = "0.4.20" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
iroh-car = { version = "^0.3.0" }
js-sys = { version = "^0.3" }
libipld = { version = "0.16" }
libipld-core = { version = "0.16" }
libipld-cbor = { version = "0.16" }
libipld-json = { version = "0.16" }
pathdiff = { version = "0.2.1" }
rand = { version = "0.8" }
reqwest = { version = "=0.11.20", default-features = false, features = ["json", "rustls-tls", "stream"] }
sentry-tracing = { version = "0.31.8" }
serde = { version = "^1" }
serde_json = { version = "^1" }
serde_urlencoded = { version = "~0.7" }
serde-wasm-bindgen = { version = "0.4" }
serde_ipld_dagcbor = { version = "0.4" }
strum = { version = "0.25" }
strum_macros = { version = "0.25" }
subtext = { version = "0.3.5" }
symlink = { version = "0.1" }
tempfile = { version = "^3" }
thiserror = { version = "1" }
tokio = { version = "^1" }
tokio-stream = { version = "~0.1" }
tokio-util = { version = "0.7" }
tower = { version = "^0.4.13" }
tower-http = { version = "^0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "~0.3.18", features = ["env-filter", "tracing-log", "json"] }
unsigned-varint = "0.8"
url = { version = "^2" }
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl"] }
vergen-pretty = { version = "0.3.1" }
void = { version = "1" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-test = { version = "^0.3" }
wasm-bindgen-futures = { version = "^0.4" }
wasm-streams = { version = "0.3.0" }
web-sys = { version = "0.3" }

[profile.release]
opt-level = 'z'
lto = true

