[workspace]
members = [
  "noosphere-cbor",
  "noosphere-storage",
  "noosphere-collections",
  "noosphere",
  "noosphere-api",
  "noosphere-fs",
  "noosphere-gateway",
  "noosphere-into"
]

[workspace.dependencies]
anyhow = "^1"
async-once-cell = "~0.3"
async-recursion = "^1"
async-std = "^1"
async-stream = "~0.3"
async-trait = "~0.1"
byteorder = "^1.4"
bytes = "^1"
cid = "~0.8"
ed25519-zebra = "^3"
futures = "~0.3"
once_cell = "^1"
rand = "~0.8"
serde = "^1"
serde_ipld_dagcbor = "~0.2"
sha2 = "~0.10"
sled = "~0.34"
temp-dir = "~0.1"
tokio = { version = "^1", default-features = false, features = ["sync", "io-util"] }
tokio-stream = "~0.1"
tokio-util = "~0.7"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
ucan = { version = "0.6.0-alpha.1", git = "https://github.com/cdata/rs-ucan.git" }
ucan-key-support = { version = "0.4.0-alpha.1", git = "https://github.com/cdata/rs-ucan.git" }
url = "^2"
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"

# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"

