[package]
name = "noosphere-api"
version = "0.5.6"
edition = "2021"
description = "Type information pertinent to the REST API of the gateway server that is a part of the Noosphere CLI"
keywords = ["rest", "api", "noosphere", "p2p"]
categories = [
  "web-programming",
  "http-client",
  "authentication",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-api"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"


[dependencies]
anyhow = "^1"
thiserror = "1.0.38"
cid = "~0.9"
url = "^2"
serde = "^1"
serde_urlencoded = "~0.7"
tracing = "~0.1"
noosphere-core = { version = "0.6.3", path = "../noosphere-core" }
noosphere-storage = { version = "0.4.2", path = "../noosphere-storage" }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }

ucan = { version = "0.1.1" }
ucan-key-support = { version = "0.1.1" }


libipld-core = "~0.15"
libipld-cbor = "~0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "~0.2"

[dev-dependencies]
wasm-bindgen-test = "~0.3"