[package]
name = "noosphere-api"
version = "0.7.3"
edition = "2021"
description = "Type information pertinent to the REST API of the gateway server that is a part of the Noosphere CLI"
keywords = ["rest", "api", "noosphere", "p2p"]
categories = [
  "web-programming",
  "http-client",
  "authentication",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-api"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"


[dependencies]
anyhow = "^1"
thiserror = { workspace = true }
cid = { workspace = true }
url = "^2"
serde = "^1"
serde_urlencoded = "~0.7"
tracing = { workspace = true }
noosphere-core = { version = "0.9.2", path = "../noosphere-core" }
noosphere-storage = { version = "0.6.1", path = "../noosphere-storage" }
noosphere-car = { version = "0.1.0", path = "../noosphere-car" }
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream = "~0.1"
tokio-util = "0.7.7"

ucan = { workspace = true }
ucan-key-support = { workspace = true }

libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "~0.2"

[dev-dependencies]
wasm-bindgen-test = "~0.3"
