[package]
name = "noosphere-api"
version = "0.12.1"
edition = "2021"
description = "Type information pertinent to the REST API of the gateway server that is a part of the Noosphere CLI"
keywords = ["rest", "api", "noosphere", "p2p"]
categories = [
  "web-programming",
  "http-client",
  "authentication",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-api"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
cid = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_urlencoded = "~0.7"
tracing = { workspace = true }
noosphere-core = { version = "0.15.1", path = "../noosphere-core" }
noosphere-storage = { version = "0.8.1", path = "../noosphere-storage" }
iroh-car = { workspace = true }
reqwest = { version = "0.11.19", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream = { workspace = true }
tokio-util = "0.7.7"

ucan = { workspace = true }
ucan-key-support = { workspace = true }

libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
