[package]
name = "noosphere-car"
version = "0.3.0"
edition = "2021"
description = "Streaming CAR format support for Noosphere"
keywords = ["car", "sync", "noosphere", "ipfs", "cid"]
categories = [
  "data-structures",
  "asynchronous",
  "encoding"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-car"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
futures = "0.3"
integer-encoding = { version = "3", features = ["tokio_async"] }
libipld = { workspace = true, features = ["dag-cbor", "derive"] }
libipld-cbor = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "^1", features = ["io-util"] }

[dev-dependencies]
multihash = { workspace = true }
tokio = { version = "^1", features = ["macros", "sync", "rt", "io-util"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
