[package]
name = "noosphere-cli"
version = "0.13.0"
edition = "2021"
description = "Reference client and pedagogical tool to demonstrate the principles of the Noosphere protocol"
keywords = ["cli", "sync", "noosphere", "p2p", "ucan"]
categories = [
  "authentication",
  "filesystem",
  "command-line interface"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-cli"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
test_kubo = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
noosphere-ns = { version = "0.9.2", path = "../noosphere-ns" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }
clap = { version = "^4.1", features = ["derive", "cargo"] }
anyhow = "^1"

tokio = { version = "^1", features = ["full"] }
tokio-stream = "~0.1"
tower = "~0.4"
tower-http = { version = "~0.3", features = ["cors", "trace"] }
async-trait = "~0.1"
tracing = { workspace = true }
iroh-car = { workspace = true }

url = { version = "^2", features = [ "serde" ] }
whoami = "^1"
home = "~0.5"
pathdiff = "~0.2"
mime_guess = "^2"
witty-phrase-generator = "~0.2"
globset = "~0.4"

noosphere-ipfs = { version = "0.7.0", path = "../noosphere-ipfs" }
noosphere-core = { version = "0.13.2", path = "../noosphere-core" }
noosphere-sphere = { version = "0.8.0", path = "../noosphere-sphere" }
noosphere-storage = { version = "0.7.1", path = "../noosphere-storage" }
noosphere-api = { version = "0.10.0", path = "../noosphere-api" }
noosphere-gateway = { version = "0.7.0", path = "../noosphere-gateway" }
noosphere = { version = "0.12.2", path = "../noosphere" }
ucan = { workspace = true }
ucan-key-support = { workspace = true }
cid = { workspace = true }
subtext = "0.3.2"

serde = { workspace = true }
serde_json = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
