[package]
name = "noosphere-cli"
version = "0.15.1"
edition = "2021"
description = "Reference client and pedagogical tool to demonstrate the principles of the Noosphere protocol"
keywords = ["cli", "sync", "noosphere", "p2p", "ucan"]
categories = [
  "authentication",
  "filesystem",
  "command-line interface"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-cli"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
default = []
helpers = ["tracing-subscriber", "noosphere-ns"]
rocksdb = ["noosphere/rocksdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }
clap = { version = "^4.4", features = ["derive", "cargo"] }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
async-trait = "~0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
iroh-car = { workspace = true }

url = { workspace = true, features = ["serde"] }
directories = { workspace = true }
mime_guess = "^2"
witty-phrase-generator = "~0.2"
globset = "~0.4"

noosphere-ipfs = { version = "0.8.1", path = "../noosphere-ipfs" }
noosphere-core = { version = "0.17.0", path = "../noosphere-core" }
noosphere-storage = { version = "0.9.0", path = "../noosphere-storage" }
noosphere-gateway = { version = "0.10.0", path = "../noosphere-gateway" }
noosphere-ns = { version = "0.11.1", path = "../noosphere-ns", optional = true }
noosphere = { version = "0.15.1", path = "../noosphere" }
ucan = { workspace = true }
ucan-key-support = { workspace = true }
cid = { workspace = true }
symlink = { workspace = true }
pathdiff = { workspace = true }
subtext = "0.3.2"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
