[package]
name = "noosphere-cli"
version = "0.17.0"
edition = "2021"
description = "Reference client and pedagogical tool to demonstrate the principles of the Noosphere protocol"
keywords = ["cli", "sync", "noosphere", "p2p", "ucan"]
categories = [
  "authentication",
  "filesystem",
  "command-line interface"
]
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-cli"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
default = ["observability"]
helpers = ["tracing-subscriber", "noosphere-ns"]
rocksdb = ["noosphere/rocksdb"]
observability = ["noosphere-gateway/observability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }
clap = { version = "^4.5", features = ["derive", "cargo"] }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
iroh-car = { workspace = true }

url = { workspace = true, features = ["serde"] }
directories = { workspace = true }
mime_guess = "^2"
witty-phrase-generator = "~0.2"
globset = "~0.4"

noosphere-ipfs = { workspace = true }
noosphere-core = { workspace = true }
noosphere-storage = { workspace = true }
noosphere-gateway = { workspace = true }
noosphere-ns = { workspace = true, optional = true }
noosphere = { workspace = true }
noosphere-ucan = { workspace = true }
noosphere-ucan-key-support = { workspace = true }

vergen-pretty = { workspace = true }

cid = { workspace = true }
symlink = { workspace = true }
pathdiff = { workspace = true }
subtext = "0.3.2"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
