[package]
name = "noosphere-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
sha2 = "0.10"
cid.workspace = true
forest_hash_utils = "0.1.0"
serde = "^1"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.2"
byteorder = "^1.4"
multihash = "0.16"
# NOTE: async-once-cell 0.4.0 shipped unstable feature usage
async-once-cell = "0.3"
async-recursion = "^1"
libipld-core = "~0.14"
libipld-cbor = "~0.14"
noosphere-storage = { path = "../noosphere-storage" }

tokio = { workspace = true, features = ["sync", "io-util"] }
# tokio-util = { version = "~0.7", features = ["io"] }
tokio-stream.workspace = true
async-stream = "~0.3"

[dev-dependencies]
async-std = "^1"
unsigned-varint = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
identity = []
