[package]
name = "noosphere-collections"
version = "0.5.1"
edition = "2021"
description = "Collection data types that are needed by an efficient implementation of Noosphere's IPLD data structures"
keywords = ["hamt", "ipld", "noosphere", "p2p", "async"]
categories = [
  "data structures",
  "asynchronous",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-collections"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
anyhow = "^1"
sha2 = "0.10"
cid = { workspace = true }
forest_hash_utils = "0.1.0"
serde = "^1"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.2"
byteorder = "^1.4"
multihash = { workspace = true }
# NOTE: async-once-cell 0.4.0 shipped unstable feature usage
async-once-cell = "0.3"
async-recursion = "^1"
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
noosphere-storage = { version = "0.6.1", path = "../noosphere-storage" }

tokio = { version = "^1", features = ["sync", "io-util"] }
tokio-stream = "~0.1"
async-stream = "~0.3"

[dev-dependencies]
async-std = "^1"
unsigned-varint = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
identity = []