[package]
name = "noosphere-collections"
version = "0.6.3"
edition = "2021"
description = "Collection data types that are needed by an efficient implementation of Noosphere's IPLD data structures"
keywords = ["hamt", "ipld", "noosphere", "p2p", "async"]
categories = [
  "data structures",
  "asynchronous",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-collections"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
sha2 = "0.10"
cid = { workspace = true }
forest_hash_utils = "0.1.0"
serde = { workspace = true }
serde_bytes = "0.11"
byteorder = "^1.4"
async-recursion = "^1"
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
noosphere-storage = { version = "0.8.1", path = "../noosphere-storage" }
tokio = { workspace = true, features = ["sync", "io-util"] }

tokio-stream = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
unsigned-varint = "0.7"
serde_ipld_dagcbor = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
identity = []
