[package]
name = "noosphere-common"
version = "0.1.2"
edition = "2021"
description = "Common, generic utilities that are shared across other Noosphere packages"
keywords = ["noosphere"]
categories = []
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-common"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
helpers = ["rand", "gloo-timers"]

[dependencies]
anyhow = { workspace = true }
gloo-timers = { workspace = true, optional = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }
futures-util = { workspace = true }
instant = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio-stream = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
futures = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
