[package]
name = "noosphere-core"
version = "0.15.1"
edition = "2021"
description = "Core data types of the Rust Noosphere implementation"
keywords = ["hamt", "ipld", "noosphere", "p2p", "async"]
categories = [
  "data-structures",
  "asynchronous",
  "encoding",
  "web-programming",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-core"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[features]
sentry = ["dep:sentry-tracing"]
helpers = []

[dependencies]
tracing = { workspace = true }
cid = { workspace = true }
url = { workspace = true }
async-trait = "~0.1"
async-recursion = "^1"
async-stream = { workspace = true }

# NOTE: async-once-cell 0.4.0 shipped unstable feature usage
async-once-cell = "~0.4"
anyhow = { workspace = true }
thiserror = { workspace = true }
fastcdc = { workspace = true }
futures = "~0.3"
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = "^1.4"
base64 = "0.21"
ed25519-zebra = "^3"
rand = "~0.8"
once_cell = "^1"
tiny-bip39 = "^1"
tokio-stream = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

noosphere-storage = { version = "0.8.1", path = "../noosphere-storage" }
noosphere-collections = { version = "0.6.3", path = "../noosphere-collections" }

ucan = { workspace = true }
ucan-key-support = { workspace = true }
sentry-tracing = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
serde_bytes = "~0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: This is needed so that rand can be included in WASM builds
getrandom = { version = "~0.2", features = ["js"] }
tokio = { workspace = true, features = ["sync", "macros"] }
console_error_panic_hook = "0.1"
tracing-wasm = "~0.2"
