[package]
name = "noosphere-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noosphere = { path = "../noosphere" }
noosphere-storage = { path = "../noosphere-storage" }

tokio = { workspace = true, features = ["sync", "io-util"] }
tokio-util = { version = "~0.7", features = ["io"] }
tokio-stream.workspace = true
async-stream = "~0.3"
bytes = "^1"
once_cell = "^1"
cid.workspace = true
anyhow.workspace = true
libipld-core = "~0.14"
libipld-cbor = "~0.14"

futures-util = "~0.3"
ucan = { version = "0.7.0-alpha.1" }
ucan-key-support = { version = "0.7.0-alpha.1" }

[dev-dependencies]
wasm-bindgen-test = "~0.3"
