[package]
name = "noosphere-fs"
version = "0.1.0-alpha.1"
edition = "2021"
keywords = ["fs", "ipld", "noosphere", "p2p", "async"]
categories = [
  "asynchronous",
  "encoding",
  "web-programming",
  "file-system",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-fs"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
noosphere-core = { path = "../noosphere-core" }
noosphere-storage = { path = "../noosphere-storage" }

tokio = { version = "^1", features = ["sync", "io-util"] }
tokio-util = { version = "~0.7", features = ["io"] }
tokio-stream = "~0.1"
async-stream = "~0.3"
bytes = "^1"
once_cell = "^1"
cid = "~0.8"
anyhow = "^1"
libipld-core = "~0.14"
libipld-cbor = "~0.14"

futures-util = "~0.3"
ucan = { version = "0.7.0-alpha.1" }
ucan-key-support = { version = "0.7.0-alpha.1" }

[dev-dependencies]
wasm-bindgen-test = "~0.3"
