[package]
name = "noosphere-fs"
version = "0.5.0"
edition = "2021"
description = "A high-level, FS-like view over Noosphere content"
keywords = ["fs", "ipld", "noosphere", "p2p", "async"]
categories = [
  "asynchronous",
  "encoding",
  "web-programming",
  "file-system",
  "web-assembly"
]
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-fs"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"
readme = "README.md"

[dependencies]
noosphere-core = { version = "0.6.0", path = "../noosphere-core" }
noosphere-storage = { version = "0.5.0", path = "../noosphere-storage" }

tokio = { version = "^1", features = ["sync", "io-util"] }
tokio-util = { version = "~0.7", features = ["io"] }
tokio-stream = "~0.1"
async-stream = "~0.3"
bytes = "^1"
once_cell = "^1"
cid = "~0.9"
anyhow = "^1"
libipld-core = "~0.15"
libipld-cbor = "~0.15"
tracing = "~0.1"

futures-util = "~0.3"
ucan = { version = "0.1.0" }
ucan-key-support = { version = "0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "~0.3"
